# WAVE-ROVER-MCP

./: Cargo.toml  README.md  todo.md
docs/: book.toml
docs/book/: 404.html  architecture.html  building.html  contributing.html  faq.html  imu-data.html  index.html  installation.html  mcp-protocol.html  overview.html  print.html  quick-start.html  robot-commands.html  robot-communication.html  searchindex.js  testing.html  toc.html  toc.js  tools.html  troubleshooting.html
docs/src/: SUMMARY.md  architecture.md  building.md  contributing.md  faq.md  imu-data.md  installation.md  introduction.md  mcp-protocol.md  overview.md  quick-start.md  robot-commands.md  robot-communication.md  testing.md  tools.md  troubleshooting.md
src/: main.rs
