[package]
name = "robot-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.1",features = ["macros","transport-io",] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
reqwest = { version = "0.12.23",features = ["blocking"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
serde_json = { version = "1.0.143", features = ["alloc", "raw_value"] }
